force-app/main/default/objects/L_neas_de_factura__c/L_neas_de_factura__c.object-meta.xml
<CustomObject>
    <label>Líneas de factura</label>
    <nameField>
        <displayFormat>LF-{0000}</displayFormat>
        <label>Nombre de Líneas de factura</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Líneas de factura</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>