force-app/main/default/objects/L_neas_de_factura__c/fields/Descripci_n_del_producto__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n_del_producto__c</fullName>
    <label>Descripción (del producto)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>