force-app/main/default/objects/L_neas_de_factura__c/fields/Importe__c.field-meta.xml
<CustomField>
    <fullName>Importe__c</fullName>
    <formula>Cantidad__c*Precio_unitario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>