force-app/main/default/objects/L_neas_de_factura__c/fields/Importe_sin_impuestos__c.field-meta.xml
<CustomField>
    <fullName>Importe_sin_impuestos__c</fullName>
    <formula>Importe__c / (1 +  Valores_timpuesto__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe sin impuestos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>