force-app/main/default/objects/L_neas_de_factura__c/fields/Impuesto_texto__c.field-meta.xml
<CustomField>
    <fullName>Impuesto_texto__c</fullName>
    <formula>IF( ISPICKVAL( Tipo_de_impuesto__c , &quot;zero&quot;) , &quot;IVA 0%&quot;, IF( ISPICKVAL( Tipo_de_impuesto__c , &quot;superreduit&quot;) , &quot;IVA 4%&quot;, IF( ISPICKVAL( Tipo_de_impuesto__c , &quot;reduit&quot;) , &quot;IVA 10%&quot;, IF( ISPICKVAL( Tipo_de_impuesto__c , &quot;standard&quot;) , &quot;IVA 21%&quot;, &quot; &quot;))) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impuesto texto</label>
    <type>Text</type>
</CustomField>