force-app/main/default/objects/L_neas_de_factura__c/fields/Impuestos__c.field-meta.xml
<CustomField>
    <fullName>Impuestos__c</fullName>
    <formula>Valores_timpuesto__c * Importe_sin_impuestos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impuestos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>