force-app/main/default/objects/L_neas_de_factura__c/fields/Lloc_de_trobada__c.field-meta.xml
<CustomField>
    <fullName>Lloc_de_trobada__c</fullName>
    <formula>IF( ISBLANK( Observaciones_del_producto__c) , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lloc de trobada</label>
    <type>Checkbox</type>
</CustomField>