force-app/main/default/objects/L_neas_de_factura__c/fields/Nombre_alternativo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_alternativo__c</fullName>
    <inlineHelpText>Nombre del producto que viene de oportunidades</inlineHelpText>
    <label>Nombre alternativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>