force-app/main/default/objects/L_neas_de_factura__c/fields/Observaciones_del_producto__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_del_producto__c</fullName>
    <label>Observaciones del producto</label>
    <type>TextArea</type>
</CustomField>