force-app/main/default/objects/L_neas_de_factura__c/fields/Precio_unitario_sin_impuestos__c.field-meta.xml
<CustomField>
    <fullName>Precio_unitario_sin_impuestos__c</fullName>
    <formula>Importe_sin_impuestos__c  /  Cantidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio unitario sin impuestos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>