force-app/main/default/objects/L_neas_de_factura__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Líneas de factura</relationshipLabel>
    <relationshipName>L_neas_de_factura</relationshipName>
    <type>Lookup</type>
</CustomField>