force-app/main/default/objects/L_neas_de_factura__c/fields/Tipo_de_impuesto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_impuesto__c</fullName>
    <label>Tipo de impuesto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>zero</fullName>
                <label>0% Tasa Cero</label>
            </value>
            <value>
                <fullName>superreduit</fullName>
                <label>4% Tasa super reducida</label>
            </value>
            <value>
                <fullName>reduit</fullName>
                <label>10% Tasa baja</label>
            </value>
            <value>
                <fullName>standard</fullName>
                <label>21% Estándar</label>
            </value>
            <value>
                <fullName>none</fullName>
                <label>Exenta</label>
            </value>
            <value>
                <fullName>No aplicar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>