force-app/main/default/objects/L_neas_de_factura__c/fields/Tipo_de_producto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_producto__c</fullName>
    <formula>TEXT( Producto__r.Tipo_de_producto__c)</formula>
    <label>Tipo de producto</label>
    <type>Text</type>
</CustomField>