force-app/main/default/objects/L_neas_de_factura__c/fields/Valores_timpuesto__c.field-meta.xml
<CustomField>
    <fullName>Valores_timpuesto__c</fullName>
    <formula>IF(ISPICKVAL ( Tipo_de_impuesto__c , &quot;zero&quot; ), 0.0,

IF(ISPICKVAL ( Tipo_de_impuesto__c , &quot;superreduit&quot; ), 0.04 ,

IF(ISPICKVAL ( Tipo_de_impuesto__c , &quot;reduit&quot; ), 0.10,

IF(ISPICKVAL( Tipo_de_impuesto__c , &quot;standard&quot; ), 0.21, 0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valores Tipos de impuesto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>